--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ html,body{
     border-radius: 7px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+@media (max-width:500px) {
+    .quiz-container{
+        margin: 10px;
+    }
+}
 .active{
     height:fit-content;
     width: fit-content;
